-- todo-manager.cabal
name:                todo-manager
version:             0.1.0.0
description:         A simple todo manager
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
 
executable todo-manager
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:    base >= 4.7 && < 5,
                      directory >= 1.3,
                      time >= 1.8,
                      containers,
                      text
    default-language: Haskell2010

